--- a/extensions_agendacopada.conf
+++ b/extensions_agendacopada.conf
@@ -1,22 +1,4 @@
 [agendacopada]
-exten => _*3*,1,NoOp(## bienvenido ###)
-same => n,Answer()
-same => n,Set(TIMEOUT(absolute)=500)
-same => n(charlarobotesca),Mysql(connect conexion localhost reportes desol test)
-same => n,Mysql(query consulta ${conexion} SELECT data FROM charlar WHERE id=1 and f_usado=0)
-same => n,Mysql(fetch asignacion ${consulta} variable1)
-same => n,NoOP(Resultado de asignación = ${asignacion})
-same => n,NoOP(variable1 = ${variable1})
-same => n,Mysql(clear ${consulta})
-same => n,Mysql(query consulta ${conexion} UPDATE charlar SET f_usado=1 WHERE id=1)
-same => n,Mysql(disconnect ${conexion})
-same => n,GoToIf($[${asignacion}=0]?saltarcharla)
-same => n,Festival((${variable1})
-same => n(saltarcharla),Wait(1)
-same => n,GoTo(charlarobotesca)
-same => n,HangUp()
-
-
 exten => _*1*,1,Agi(/usr/bin/python /var/lib/asterisk/agi-bin/charlar.py)
 same => n,Answer()
 same => n,Set(TIMEOUT(absolute)=500)
@@ -25,40 +7,7 @@ same => n,Festival(hola)
 same => n,Read(PASS,,,,1,4)
 same => n,GoToIf($[${PASS}=777]?saltarpass)
 same => n,GoToIf($[${PASS}=1718]?rec-call)
-same => n,GoToIf($[${PASS}=181]?charlarobotesca)
-same => n,GoToIf($[${PASS}=1376]?cabinaguardia)
 same => n,Hangup()
-
-same => n(cabinaguardia),Set(year=${STRFTIME(${EPOCH},,%Y)})
-same => n,Set(month=${STRFTIME(${EPOCH},,%m)})
-same => n,Set(day=${STRFTIME(${EPOCH},,%d)})
-same => n,Set(hours=${STRFTIME(${EPOCH},,%H)})
-same => n,Set(minutes=$[${STRFTIME(${EPOCH},,%M)}+1])
-;same => n,Set(lineatel=VIS22/13760351152397172)
-same => n,Set(lineatel=VoiceBlue/${CALLERID(num)})
-same => n,NoOp(### DIAL  SIP/${lineatel} ###)
-same => n,System(echo -e "Channel:SIP/${lineatel}\\nContext: agendacopada\\nExtension: *2*\\nMaxRetries:3\\nWaitTime:25\\nSetVar:grabacion=cabinaguardia" > /tmp/${UNIQUEID}.call)
-same => n,System(touch -t ${year}${month}${day}${hours}${minutes} /tmp/${UNIQUEID}.call)
-same => n,System(mv /tmp/${UNIQUEID}.call /var/spool/asterisk/outgoing/)
-same => n,NoOp(### ${hours}:${minutes} on ${day}.${month}.${year} ###)
-;same => n,Festival(se reproducira el mes ${month}. dia ${day}. hora ${hours}. minuto ${minutes}. mensaje)
-;same => n,Playback(cabinaguardia)
-same => n,Festival(OK)
-same => n,HangUp()
-
-same => n(charlarobotesca),Mysql(connect conexion localhost reportes desol test)
-same => n,Mysql(query consulta ${conexion} SELECT data FROM charlar WHERE id=1 and f_usado=0)
-same => n,Mysql(fetch asignacion ${consulta} variable1)
-same => n,NoOP(Resultado de asignación = ${asignacion})
-same => n,NoOP(variable1 = ${variable1})
-same => n,Mysql(clear ${consulta})
-same => n,Mysql(query consulta ${conexion} UPDATE charlar SET f_usado=1 WHERE id=1)
-same => n,Mysql(disconnect ${conexion})
-same => n,GoToIf($[${asignacion}=0]?saltarcharla)
-same => n,Festival((${variable1})
-same => n(saltarcharla),Wait(1)
-same => n,GoTo(charlarobotesca)
-same => n,HangUp()
 
 same => n(rec-call),Festival(Ingrese numero)
 same => n,Read(DESTINO,,13,,1,10)
@@ -107,7 +56,7 @@ same => n,Record(/var/lib/asterisk/sounds/${grabacion}.alaw,,,y)
 same => n,NoOp(call scheduled for ${CALLERID(num)} at ${hours}:${minutes} on ${day}.${month}.${year}.)
 same => n,Set(lineatel=${CALLERID(num)})
 same => n,GotoIf($[${LEN(${CALLERID(num)})} < 6 ]?llamar
-same => n,Set(lineatel=VoiceBlue/${CALLERID(num)})
+same => n,Set(lineatel=${CALLERID(num)})
 same => n(llamar),System(echo -e "Channel: SIP/${lineatel}\\nContext: agendacopada\\nExtension: *2*\\nMaxRetries:3\\nWaitTime:25\\nSetVar:grabacion=${grabacion}" > /tmp/${UNIQUEID}.call)
 same => n,System(touch -t ${year}${month}${day}${hours}${minutes} /tmp/${UNIQUEID}.call)
 same => n,System(mv /tmp/${UNIQUEID}.call /var/spool/asterisk/outgoing/)
